kubernetes/apps/kube-system/ocharted/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ocharted
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ocharted
      app.kubernetes.io/name: ocharted
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: envoy-external
      ports:
        - port: 8080
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8081
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ocharted-external
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: ocharted
      app.kubernetes.io/name: ocharted
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchName: kubernetes-sigs.github.io
              - matchName: github.com
              - matchName: release-assets.githubusercontent.com
    - toFQDNs:
        - matchName: kubernetes-sigs.github.io
        - matchName: github.com
        - matchName: release-assets.githubusercontent.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
